--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^16.1.4",
     "express": "~4.16.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.8.0",
